# Beebot

./: .gitignore  .nojekyll  LICENSE  PowerButton.ino  README.md  _quarto.yml  git-guide.md  index.html  index.qmd
api/: nodes.qmd  topics.qmd
control/.backup/bee_driver/arduino_serial_empc/: CMakeLists.txt  README.md  package.xml
control/.backup/bee_driver/arduino_serial_empc/src/: arduino_serial_empc.cpp
control/.backup/hw_interface/: CMakeLists.txt
control/.backup/non_control_comm/serial_comm_cpp/: CMakeLists.txt  package.xml
control/.backup/non_control_comm/serial_comm_cpp/include/: serial_comm_cpp.hpp
control/.backup/non_control_comm/serial_comm_cpp/launch/: serial_comm_cpp.launch
control/.backup/non_control_comm/serial_comm_cpp/src/: serial_comm_cpp.cpp
control/.backup/pca9685_servo/: CMakeLists.txt  package.xml
control/.backup/pca9685_servo/launch/: pca9685_servo.launch
control/arduino_serial/: CMakeLists.txt  package.xml
control/arduino_serial/arduino code/arduino_code/: arduino_code.ino
control/arduino_serial/arduino code/arduino_lib/libraries/LCDWIKI_KBV/: LCDWIKI_KBV.cpp
control/arduino_serial/arduino_code/: arduino_code.ino
control/arduino_serial/include/: arduino_serial.h
control/arduino_serial/launch/: arduino_serial.launch
control/arduino_serial/src/: arduino_serial.cpp  arduino_serial.cpp.save
control/base_controller_ros/: CMakeLists.txt
control/base_controller_ros/src/: base_controller.cpp
control/bee_driver/serial_comm_cpp/: CMakeLists.txt  package.xml
control/bee_driver/serial_comm_cpp/examples/: motor_control.cpp
control/hw_interface/: package.xml
control/hw_interface/arduino_code/: arduino_code.ino
control/hw_interface/launch/: hw_interface.launch
control/hw_interface/src/: hw_interface.cpp
control/remote_control/: CMakeLists.txt  README.md  package.xml
control/remote_control/config/: remote_control.yaml
control/remote_control/include/: remote_control.h
control/remote_control/launch/: master_transmit.launch  remote_control.launch
control/remote_control/src/: remote_control.cpp
docs/: search.json
high_level/gyrodometry_ros/: README.md  package.xml
high_level/gyrodometry_ros/src/: gyrodometry.cpp
high_level/icp_matching_ros/: README.md  package.xml
high_level/icp_matching_ros/include/icp_matching/: icp_matching.h
high_level/icp_matching_ros/launch/: rviz_3d.rviz  test.launch
high_level/icp_matching_ros/pcd/: src.pcd  target.pcd
high_level/icp_matching_ros/src/: icp_matching.cpp
high_level/icp_matching_ros/src/demo/: demo.cpp  test_pcd_creator.cpp
high_level/likelihood_field_gridmap_ros/: LICENSE  README.md  package.xml
high_level/likelihood_field_gridmap_ros/src/: likelihood_field_gridmap.cpp
high_level/scan_to_pcl_ros/: README.md  package.xml
high_level/scan_to_pcl_ros/src/: scan_to_pcl.cpp
low_level/: GUI2.py  (+2 more)
motion_planning/amr_navigation_utils_ros/: CMakeLists.txt  README.md  package.xml
motion_planning/amr_navigation_utils_ros/include/amr_navigation_utils_ros/: footprint.h
motion_planning/amr_navigation_utils_ros/launch/: pointcloud_angle_filter.launch  pointcloud_angle_filter.yaml
motion_planning/amr_navigation_utils_ros/launch/test/: pointcloud_angle_filter.rviz
motion_planning/amr_navigation_utils_ros/src/: footprint.cpp  footprint_publisher.cpp  pointcloud_angle_filter.cpp
motion_planning/local_goal_creator_ros/: README.md  package.xml
motion_planning/local_goal_creator_ros/include/local_goal_creator/: local_goal_creator.h
motion_planning/local_goal_creator_ros/launch/: test.launch
motion_planning/local_goal_creator_ros/src/: local_goal_creator.cpp
motion_planning/recovery_behavior_ros/: .rosinstall  CMakeLists.txt  README.md  package.xml
motion_planning/recovery_behavior_ros/include/recovery_behavior/: recovery_behavior.h
motion_planning/recovery_behavior_ros/launch/: gazebo.launch  recovery_behavior.launch  rviz.rviz  test.launch  test.yaml
motion_planning/recovery_behavior_ros/src/: recovery_behavior.cpp
slam/amr_navigation_utils_ros/: package.xml
slam/amr_navigation_utils_ros/launch/test/: test_pointcloud_angle_filter.launch
slam/amr_navigation_utils_ros/src/: footprint_publisher.cpp
slam/icp_matching_ros/: CMakeLists.txt  download.sh  package.xml
slam/icp_matching_ros/launch/: rviz_2d.rviz  test.launch
slam/icp_matching_ros/src/: icp_matching.cpp
slam/likelihood_field_gridmap_ros/: CMakeLists.txt  README.md  package.xml
slam/likelihood_field_gridmap_ros/launch/: rviz.rviz  test.launch
slam/likelihood_field_gridmap_ros/src/: likelihood_field_gridmap.cpp
whole_system/: CMakeLists.txt  README.md  package.xml
whole_system/config/param/: global_path_planner.yaml  local_goal_creator.yaml  local_map_creator.yaml  local_path_planner.yaml  localizer.yaml  obstacle_detector.yaml  obstacle_expander.yaml
whole_system/config/rviz/: all.rviz  global_path_planner.rviz  local_goal_creator.rviz  local_map_creator.rviz  localizer.rviz  obstacle_detector.rviz  obstacle_expander.rviz
whole_system/include/global_path_planner/: global_path_planner.h  obstacle_expander.h
whole_system/include/local_goal_creator/: local_goal_creator.h
whole_system/include/local_map/: local_map_creator.h  obstacle_detector.h
whole_system/include/local_path_planner/: local_path_planner.h
whole_system/include/localizer/: emcl.h  odom_model.h  particle.h  pose.h
whole_system/launch/: all.launch  all_with_visualization_off.launch  global_path_planner.launch  local_goal_creator.launch  local_map_creator.launch  local_path_planner.launch  localizer.launch  obstacle_detector.launch  obstacle_expander.launch
whole_system/map/: map.pgm  map.yaml  old_map.yaml
whole_system/src/: emcl.cpp  global_path_planner.cpp  global_path_planner_node.cpp  local_goal_creator.cpp  local_goal_creator_node.cpp  local_map_creator.cpp  local_map_creator_node.cpp  local_path_planner.cpp  local_path_planner_node.cpp  localizer_node.cpp  obstacle_detector.cpp  obstacle_detector_node.cpp  obstacle_expander.cpp  obstacle_expander_node.cpp  odom_model.cpp  particle.cpp  pose.cpp
(+283 files in other folders)
