<?xml version="1.0"?>
<package format="2">
  <name>amr_system</name>
  <version>0.0.0</version>
  <description>
    This package provides a navigation system for autonomous mobile robots.
  </description>

  <maintainer email="arduicomvn@gmail.com">beebot</maintainer>
  <license>TODO</license>

  <url type="website">https://github.com/phatcvo/amr_system</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
