<?xml version="1.0"?>
<package format="2">
  <name>hw_interface</name>
  <version>0.0.1</version>
  <description>The hw_interface package</description>

  <!-- This is a simple message passing package -->
  <maintainer email="arduicomvn@gmail.com">beelab</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
