<?xml version="1.0"?>
<package format="2">
  <name>remote_control</name>
  <version>0.0.0</version>
  <description>The remote_control package</description>
  <maintainer email="phat@todo.todo">phat</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
