<?xml version="1.0"?>
<package format="3">
  <name>icp_matching_ros</name>
  <version>0.0.0</version>
  <description>The icp_matching_ros package</description>
  <maintainer email="arduicomvn@gmail.com">beebot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
