<?xml version="1.0"?>
<package format="3">
  <name>likelihood_field_gridmap_ros</name>
  <version>0.0.0</version>
  <description>The likelihood_field_gridmap_ros package</description>
  <maintainer email="arduicomvn@gmail.com">beebot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>roscpp</depend>

  <exec_depend>map_server</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
