<?xml version="1.0"?>
<package format="3">
  <name>local_goal_creator_ros</name>
  <version>0.0.0</version>
  <description>The local_goal_creator_ros package</description>
  <maintainer email="arduicomvn@gmail.com">beebot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
