<?xml version="1.0"?>
<package format="3">
  <name>recovery_behavior_ros</name>
  <version>0.0.0</version>
  <description>The recovery_behavior_ros package</description>
  <maintainer email="arduicomvn@gmail.com">beebot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>amr_navigation_utils_ros</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
