<?xml version="1.0"?>
<package format="3">
  <name>amr_navigation_utils_ros</name>
  <version>0.0.0</version>
  <description>The amr_navigation_utils_ros package</description>
  <maintainer email="phatcvo@todo.todo">phatcvo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
