<?xml version="1.0"?>
<package format="2">
    <name>serial_comm_cpp</name>
    <version>0.0.0</version>
    <description>The serial_comm_cpp package</description>
    <maintainer email="phat@todo.todo">phat</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>serial</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>serial</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>serial</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>
